<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/my_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/my_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPicture" />

    <View
        android:id="@+id/dvProfile"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/profile_list_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvProfile">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/profile_list_padding"
                    android:paddingBottom="@dimen/profile_list_padding">

                    <TextView
                        android:id="@+id/tvLabelTrack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_track"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dvProfile" />

                    <TextView
                        android:id="@+id/tvValTrack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_track_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelTrack"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelTrack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/profile_list_padding"
                    android:paddingBottom="@dimen/profile_list_padding">

                    <TextView
                        android:id="@+id/tvLabelCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_country"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelTrack" />

                    <TextView
                        android:id="@+id/tvValCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_country_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelCountry"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelCountry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/profile_list_padding"
                    android:paddingBottom="@dimen/profile_list_padding">

                    <TextView
                        android:id="@+id/tvLabelEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelCountry" />

                    <TextView
                        android:id="@+id/tvValEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_email_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelEmail"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelEmail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/profile_list_padding"
                    android:paddingBottom="@dimen/profile_list_padding">

                    <TextView
                        android:id="@+id/tvLabelPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

                    <TextView
                        android:id="@+id/tvValPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_phone_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelPhone"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelPhone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/profile_list_padding"
                    android:paddingBottom="@dimen/profile_list_padding">

                    <TextView
                        android:id="@+id/tvLabelSlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_slack_username"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvValPhone" />

                    <TextView
                        android:id="@+id/tvValSlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_list_margin"
                        android:layout_marginLeft="@dimen/profile_list_margin"
                        android:text="@string/alc_profile_slack_username_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvLabelSlack"
                        app:layout_constraintStart_toEndOf="@id/tvLabelSlack" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>